--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "like im 聊天室",
   "main": "client/index.js",
   "scripts": {
+    "dev": "NODE_ENV=production node ./server/index.mjs",
     "preinstall": "npx only-allow pnpm"
   },
   "engines": {
@@ -16,6 +17,9 @@
   "author": "me@zengxingqi.com",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
+    "@socket.io/redis-adapter": "^7.2.0",
+    "redis": "^4.3.1",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
   }
