--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "like-im",
   "version": "1.0.0",
   "description": "like im 聊天室",
-  "main": "client/index.js",
+  "main": "index.mjs",
   "scripts": {
-    "dev": "NODE_ENV=production node ./server/index.mjs",
+    "dev": "NODE_ENV=production node index.mjs",
     "preinstall": "npx only-allow pnpm"
   },
   "engines": {
@@ -20,7 +20,6 @@
     "@socket.io/admin-ui": "^0.5.1",
     "@socket.io/redis-adapter": "^7.2.0",
     "redis": "^4.3.1",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "socket.io": "^4.5.3"
   }
 }
