--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "like im 聊天室",
   "main": "index.mjs",
   "scripts": {
-    "dev": "NODE_ENV=production node index.mjs",
+    "dev": "NODE_ENV=development node index.mjs",
+    "prod": "NODE_ENV=production node index.mjs",
     "preinstall": "npx only-allow pnpm"
   },
   "engines": {
@@ -21,5 +22,8 @@
     "@socket.io/redis-adapter": "^7.2.0",
     "redis": "^4.3.1",
     "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
+    "@socket.io/pm2": "^5.1.0"
   }
 }
